# RagAgent2

./: .gitignore  README.md  RagAgent.bat  RagAgent.info.txt  ingestion.py  pyproject.toml  ragagent2.py
graph/: graph.py  state.py
graph/chains/: answer_grader.py  router.py
graph/nodes/: generate.py  retrieve.py  web_search.py
